Fix breadcrumb scrollbar behaviour on site manager.

--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -131,9 +131,9 @@ tree-node-expander{
 
 
 .breadcrumb {
-  padding: 2px;
+  padding: 0px;
   background-color: inherit;
-  margin: 15px 0 0 0;
+  margin: 10px 0 0 0;
   font-size: 12px;
   font-weight: bold;
   color:#767676;
